# RiskWise-AI-Agentic-Underwriter

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: pull_request_template.md
backend/: __init__.py  requirements.txt
backend/app/: __init__.py  config.py  schemas.py
backend/app/agents/: __init__.py  compliance_agent.py  customer_profile_agent.py  decision_agent.py  fraud_detection_agent.py  rag_underwriting_agent.py  risk_assessment_agent.py
backend/app/data/: __init__.py  data_loader.py  feature_engineering.py  preprocessing.py
backend/app/ml/: __init__.py  fraud_predictor.py  metrics.py  model_registry.py  train_fraud_model.py
backend/app/rag/: __init__.py  chunking.py  embeddings.py  ingest.py  retriever.py  vector_store.py
backend/app/services/: __init__.py
backend/app/utils/: pdf_loader.py
docs/: architecture.md  development.md  staged-implementation-plan.md
docs/assets/eda/: README.md
docs/pr/: agents.md  architecture-baseline.md  dataset-loading.md  eda.md  fraud-model.md  project-setup.md  rag-ingestion.md  rag-retriever.md
notebooks/: data_exploration.ipynb  fraud_model_training.ipynb
tests/: test_agents.py  test_data_loader.py  test_fraud_model.py  test_project_structure.py  test_rag.py
