[project]
name = "riskwise-ai-agentic-underwriter"
version = "0.1.0"
description = "Multi-agent insurance underwriting and fraud risk platform."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

